tests/spec/fail/multi_return_single_item_parse.aja
fuc bad() -> (int):
    return 1
